<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="81dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="81dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputLogin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:ellipsize="start"
                android:fontFamily="@font/medieval_scroll_of_wisdom"
                android:gravity="center"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLength="30"

                android:textColor="#000000"
                android:textColorHint="#000000"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="81dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="81dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:ellipsize="start"
                android:fontFamily="@font/medieval_scroll_of_wisdom"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="text"
                android:maxLength="30"
                android:password="true"

                android:textColor="#000000"
                android:textColorHint="#000000"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="81dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="81dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/medieval_scroll_of_wisdom"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="81dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="81dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/medieval_scroll_of_wisdom"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="143dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="143dp"
            android:fontFamily="@font/medieval_scroll_of_wisdom"
            android:text="@string/diary_of_the_creator"
            android:textColor="#000000"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>